--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
   path = $HOME/.config/bspwm
   url = git@github.com:whiteboardev/bspwm.git
 
+[submodule "alacritty"]
+  path = $HOME/.config/alacritty
+  url = git@github.com:whiteboardev/alacritty.git
 
 [submodule "picom"]
   path = $HOME/.config/picom
